RbA Build/src/objects/RbA_Work_Order__c.object
<CustomObject>
    <description>Custom Object used to track Work Orders related to Orders.</description>
    <fields>
        <fullName>AR_Reason__c</fullName>
        <formula>TEXT(Sold_Order__r.AR_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dwelling association to the Work Order.</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dwelling</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RbA Work Orders (Account)</relationshipLabel>
        <relationshipName>RbA_Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>If Installation Date is Blank, default to Today - Rennovate Right Date otherwise use Installation Date.</description>
        <formula>IF(
ISBLANK(Sold_Order__r.Installation_Date__c), TODAY()- Renovate_Right_Booklet_Signed_Date__c, Sold_Order__r.Installation_Date__c-Renovate_Right_Booklet_Signed_Date__c)</formula>
        <inlineHelpText>If Installation Date is Blank, default to Today - Rennovate Right Date otherwise use Installation Date.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_End_Time__c</fullName>
        <label>Alternate End Time</label>
        <picklist>
            <picklistValues>
                <fullName>10:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Start_Time__c</fullName>
        <label>Alternate Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>6:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Time_Window__c</fullName>
        <label>Alternate Time Window</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <inlineHelpText>Date Application was applied for</inlineHelpText>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Notes__c</fullName>
        <inlineHelpText>Pulled from Municipality record</inlineHelpText>
        <label>Application Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <label>Application Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Duration__c</fullName>
        <inlineHelpText>Duration the Appoitment will be</inlineHelpText>
        <label>Appointment Duration</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointment_End_Time__c</fullName>
        <label>Appointment End Time</label>
        <picklist>
            <picklistValues>
                <fullName>10:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 am</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appointment_Start_Time__c</fullName>
        <label>Appointment Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>6:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Resources__c</fullName>
        <label># Assigned Resources</label>
        <summaryForeignKey>Assigned_Resources__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bond_Amount__c</fullName>
        <inlineHelpText>Total for the Bond</inlineHelpText>
        <label>Bond Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bond_Issue_Date__c</fullName>
        <inlineHelpText>What date was the Bond Issued?</inlineHelpText>
        <label>Bond Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bond_Refund_Amount__c</fullName>
        <inlineHelpText>Amount to refund for the Bond</inlineHelpText>
        <label>Bond Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bond_Refund_Date__c</fullName>
        <inlineHelpText>Date Bond was refunded.</inlineHelpText>
        <label>Bond Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bond_Refund_Request_Sent_Date__c</fullName>
        <inlineHelpText>Date the Refund Request was sent.</inlineHelpText>
        <label>Bond Refund Request Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bond_Required__c</fullName>
        <formula>IF  
(Municipality__r.Bond_Required__c = TRUE, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicated from Municipality table.</inlineHelpText>
        <label>Bond Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Returned_Check_Num__c</fullName>
        <inlineHelpText>The check number that was returned to the customer.</inlineHelpText>
        <label>Bond Returned Check #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Application_Type__c</fullName>
        <formula>Text( Municipality__r.Building_Application_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Application Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Constraint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowner Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>“City” part of the work order location.</description>
        <inlineHelpText>“City” part of the work order location.</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Appt_Date_Install__c</fullName>
        <description>Automatically set by workflow when Status is set to Complete</description>
        <inlineHelpText>Automatically set by workflow when Status is set to Complete</inlineHelpText>
        <label>Completed Appt Date: Install</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Appt_Date_Service__c</fullName>
        <description>Automatically set by workflow when Status is set to Complete</description>
        <inlineHelpText>Automatically set by workflow when Status is set to Complete</inlineHelpText>
        <label>Completed Appt Date: Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Appt_Date_Tech_Measure__c</fullName>
        <description>Automatically set by workflow when Status is set to Complete</description>
        <inlineHelpText>Automatically set by workflow when Status is set to Complete</inlineHelpText>
        <label>Completed Appt Date: Tech Measure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Notes__c</fullName>
        <description>Historical Notes for Service WOs from Pivotal</description>
        <inlineHelpText>Historical Notes for Service WOs from Pivotal</inlineHelpText>
        <label>Completion Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_Appt_w_Customer__c</fullName>
        <inlineHelpText>Date/Time you called the customer and confirmed the scheduled visit out to the home.</inlineHelpText>
        <label>Confirmed Appt w/Customer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the contact person from the customer account for this service order. Is a lookup to an existing salesforce contact record</description>
        <inlineHelpText>Name of the contact person from the customer account for this service order. Is a lookup to an existing salesforce contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Required_to_Municipality__c</fullName>
        <description>Contract required to be sent to Municipality</description>
        <formula>Municipality__r.Contract_Required_to_Municipality__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract required to be sent to Municipality</inlineHelpText>
        <label>Contract Required to Municipality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <inlineHelpText>Date Approval was received</inlineHelpText>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <inlineHelpText>Date Application was received.</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_scheduled_for_testing__c</fullName>
        <label>Date scheduled for testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPA_Form_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EPA Form Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Ship_Date__c</fullName>
        <description>pulled in from Sold Order, used for Scheduling</description>
        <formula>Sold_Order__r.Estimated_Ship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulled in from Sold Order, used for Scheduling</inlineHelpText>
        <label>Estimated Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Inspection_Completed__c</fullName>
        <formula>IF(Final_Inspection_Date_Time__c &lt; NOW(), &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Inspection Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Inspection_Date_Time__c</fullName>
        <inlineHelpText>Date &amp; Time the Final Inspection is scheduled for</inlineHelpText>
        <label>Final Inspection Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Labor__c</fullName>
        <label>Initial Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inspection_Cancelled_Reason__c</fullName>
        <inlineHelpText>Reason inspection was cancelled</inlineHelpText>
        <label>Inspection Cancelled Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Constraint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Owner Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inspection_Cancelled__c</fullName>
        <inlineHelpText>Date the inspection was cancelled</inlineHelpText>
        <label>Inspection Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Completed__c</fullName>
        <inlineHelpText>Date inspection was completed</inlineHelpText>
        <label>Inspection Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Scheduled_Date_Time__c</fullName>
        <inlineHelpText>What date and time is the inspection scheduled?</inlineHelpText>
        <label>Inspection Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LSWP_Test_Results__c</fullName>
        <description>Used by MapAnything to show on the Calendar view as a visual indicator.</description>
        <formula>OR( 
IF ( Sold_Order__r.LSWP_Test_Results__c = &quot;Positive&quot;, TRUE, FALSE), 
IF ( Sold_Order__r.LSWP_Test_Results__c = &quot;Presumed&quot;, TRUE, FALSE))</formula>
        <inlineHelpText>If the Order has a an LSWP WO and the test results are Postive or Presumed this will be checked.</inlineHelpText>
        <label>LSWP Test Results - Positive/Presumed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labor_Install__c</fullName>
        <description>Field populated via trigger</description>
        <inlineHelpText>Sum of total hours from all the Completed Labor Records associated with the Work Order.
Field populated via trigger</inlineHelpText>
        <label>Labor: Install</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labor_Paint_Stain__c</fullName>
        <description>Field populated via trigger</description>
        <inlineHelpText>Sum of total hours from all the Completed Labor Records associated with the Work Order.
Field populated via trigger</inlineHelpText>
        <label>Labor: Paint/Stain</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Test_Results__c</fullName>
        <label>Lead Test Results</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presumed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Municipality_Contact_Phone__c</fullName>
        <formula>Municipality_Contact__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipality Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Municipality Contact must be active and attached to the Municipality associated to the Work Order.</errorMessage>
            <filterItems>
                <field>$Source.Municipality__c</field>
                <operation>equals</operation>
                <valueField>Municipality_Contact__c.Municipality__c</valueField>
            </filterItems>
            <filterItems>
                <field>Municipality_Contact__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>The Municipality Contact must be active and attached to the Municipality associated to the Work Order.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Municipality_Contact__c</referenceTo>
        <relationshipLabel>Permit Work Orders</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Municipality_Notes__c</fullName>
        <formula>Municipality__r.Application_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What Municipality does this Dwelling fall into?</inlineHelpText>
        <label>Municipality</label>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Permit Work Orders</relationshipLabel>
        <relationshipName>Work_Orders_Permits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Note_to_Installer__c</fullName>
        <label>Note to Installer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_of_Windows__c</fullName>
        <inlineHelpText>Number of Windows needing to be measured.</inlineHelpText>
        <label># of Windows</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Open_Events_Formula__c</fullName>
        <description>Determines if there are any open events, if so the Work Order may not be closed/completed</description>
        <formula>IF( 
     AND(ISPICKVAL(Work_Order_Type__c,&quot;Service&quot;),   
     NOT(ISBLANK(Scheduled_Appt_Date_Time_Service__c)),  
     Scheduled_Appt_Date_Time_Service__c&gt;NOW(),
     NOT(ISBLANK(Primary_Service__c))),1,
IF( 
     AND(ISPICKVAL(Work_Order_Type__c,&quot;Install&quot;), 
     NOT(ISBLANK(Scheduled_Appt_Date_Time_Install__c)),   
     Scheduled_Appt_Date_Time_Install__c&gt;NOW(),
     NOT(ISBLANK(Primary_Installer__c))),1,
IF( 
     AND(ISPICKVAL(Work_Order_Type__c,&quot;Tech Measure&quot;), 
     NOT(ISBLANK(Scheduled_Appt_Date_Time_Tech_Measure__c)),   
     Scheduled_Appt_Date_Time_Tech_Measure__c&gt;NOW(),
     NOT(ISBLANK(Primary_Tech_Measure__c))),1,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if there are any open events, if so the Work Order may not be closed/completed</inlineHelpText>
        <label>Number Open Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Open_Events__c</fullName>
        <description>Field populated via declarative lookup helper</description>
        <inlineHelpText>Counts the number of Open Events Associated to the Work Order</inlineHelpText>
        <label>Number Open Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Type of service order: Field Service, Depot repair etc.</description>
        <inlineHelpText>Type of service order: Field Service, Depot repair etc.</inlineHelpText>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tech Measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint/Stain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSWP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Appt_Date_Time_Install__c</fullName>
        <description>Set by related Work Order Events on create, holds the StartDate based on Service Type and remains unchanged after populated.</description>
        <inlineHelpText>Set by related Work Order Events on create, holds the StartDate based on Service Type and remains unchanged after populated.</inlineHelpText>
        <label>Original Appt Date/Time: Install</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Appt_Date_Time_Service__c</fullName>
        <description>Set by related Work Order Events on create, holds the StartDate based on Service Type and remains unchanged after populated.</description>
        <inlineHelpText>Set by related Work Order Events on create, holds the StartDate based on Service Type and remains unchanged after populated.</inlineHelpText>
        <label>Original Appt Date/Time: Service</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Appt_Date_Time_Tech_Measure__c</fullName>
        <description>Set by related Work Order Events on create, holds the StartDate based on Service Type and remains unchanged after populated.</description>
        <inlineHelpText>Set by related Work Order Events on create, holds the StartDate based on Service Type and remains unchanged after populated.</inlineHelpText>
        <label>Original Appt Date/Time: Tech Measure</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Paint_Stain_Invoice_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paint/Stain Invoice Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paint_Stain_Order_Attached_to_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paint/Stain Order Attached to Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the permit is attached, check box</inlineHelpText>
        <label>Permit Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_Fee__c</fullName>
        <inlineHelpText>Total Cost of Permit Fees</inlineHelpText>
        <label>Permit Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Permit_Number__c</fullName>
        <inlineHelpText>Permit Number</inlineHelpText>
        <label>Permit Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Sent_To__c</fullName>
        <inlineHelpText>Who was the permit sent to?</inlineHelpText>
        <label>Permit Sent To</label>
        <picklist>
            <picklistValues>
                <fullName>Homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permit_Status__c</fullName>
        <label>Permit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pivotal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>external id from Pivotal</description>
        <externalId>true</externalId>
        <inlineHelpText>external id from Pivotal</inlineHelpText>
        <label>Pivotal Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pre_Inspection_Completed__c</fullName>
        <inlineHelpText>Date inspection was completed</inlineHelpText>
        <label>Pre-Inspection Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Inspection_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Inspection Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Inspection_Scheduled_Date_Time__c</fullName>
        <inlineHelpText>What date and time is the inspection scheduled?</inlineHelpText>
        <label>Pre-Inspection Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Primary_Installer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set by WO Event if the Event Assignee is &quot;Primary Resource&quot; == TRUE</description>
        <inlineHelpText>Set by WO Event if the Event Assignee is &quot;Primary Resource&quot; == TRUE</inlineHelpText>
        <label>Primary Installer</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>RbA Work Orders (Primary Installer)</relationshipLabel>
        <relationshipName>RbA_Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Set by related scheduled Events</inlineHelpText>
        <label>Primary Service</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>RbA Work Orders (Primary Service)</relationshipLabel>
        <relationshipName>RbA_Work_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Tech_Measure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set by WO Event if the Event Assignee is &quot;Primary Resource&quot; == TRUE</description>
        <inlineHelpText>Set by WO Event if the Event Assignee is &quot;Primary Resource&quot; == TRUE</inlineHelpText>
        <label>Primary Tech Measure</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>RbA Work Orders</relationshipLabel>
        <relationshipName>RbA_Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product in which specialization would be required to service the work order. Calculated from installed product by OptiMax pre-calculation engine</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>